<resources>
    <string name="app_name">Pyramid Test - V02max</string>
    <string name="greeting">Welcome to the swedish school of sport and health sciences (GIH) VO2max mobile application!</string>
    <string name="NewMeasurement">Start test</string>
    <string name="agetextview">Enter Age:</string>
    <string name="Pretest1">Pretest 1</string>
    <string name="othertest">Other test?</string>
    <string name="weighttextview">Enter Weight:</string>
    <string name="idtextview">Enter ID:</string>
    <string name="button">View Data</string>
    <string name="ButtonAddData">Add Data</string>


    <string name="valueSelector_label">Laps</string>
    <string name="action_settings">Settings</string>
    <string name="Calculate">Calculate</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="minutes">Minutes</string>
    <string name="min_3">3</string>
    <string name="min_4">4</string>
    <string name="min_5">5</string>
    <string name="_0">0</string>
    <string name="_00">0</string>
    <string name="_000">0</string>
    <string name="_0000">0</string>
    <string name="_00000">0</string>
    <string name="_000000">0</string>
    <string name="Laps_textbox">0</string>
    <string name="decrementbutton">decrementbutton</string>
    <string name="incrementbutton">incrementbutton</string>
    <string name="stop">Stop</string>
    <string name="database_btn">Database</string>
    <string name="Submit_Btn">Submit</string>
    <string name="SearchBtn">Search</string>
    <string name="btnSearch">Search User</string>
    <string name="power5MPT">5MPT</string>
    <string name="vo2max_liter_5">[l5]</string>
    <string name="userid">ID</string>
    <string name="alder">Ålder</string>
    <string name="vikt">Vikt</string>
    <string name="vo2max_liter_4">[l4]</string>
    <string name="vo2max_liter_3">[l3]</string>
    <string name="power3MPT">3MPT</string>
    <string name="power4MPT">4MPT</string>
    <string name="vo2max_mliter_3">[ml3]</string>
    <string name="vo2max_mliter_4">[ml4]</string>
    <string name="vo2max_mliter_5">[ml5]</string>
    <string name="number_of_laps_3">n3</string>
    <string name="antal_vandor_4">n4</string>
    <string name="number_of_laps_5">n5</string>
    <string name="DeleteBtn">Delete User</string>
    <string name="user_id">User ID</string>
    <string name="user_idtextview">User ID</string>
    <string name="delete_user">DELETE USER</string>
    <string name="search">SEARCH</string>
    <string name="show_user">Show User</string>
    <string name="other_tests">Other tests</string>
    <string name="number_of_laps"># Laps</string>
    <string name="id">ID</string>
    <string name="laps3">Laps3</string>
    <string name="laps4">Laps4</string>
    <string name="laps5">Laps5</string>
    <string name="power3">Power3</string>
    <string name="power4">Power4</string>
    <string name="power5">Power5</string>
    <string name="vo2maxl3">Vo2maxl3</string>
    <string name="vo2maxl4">Vo2maxl4</string>
    <string name="vo2maxl5">Vo2maxl5</string>
    <string name="vo2maxml3">Vo2maxml3</string>
    <string name="vo2maxml4">Vo2maxml4</string>
    <string name="vo2maxml5">Vo2maxml5</string>
    <string name="kg">kg</string>
    <string name="user_age_hint">User Age</string>
    <string name="user_id_hint">User ID</string>
    <string name="date">Date</string>
    <string name="date_2">Date</string>
    <string name="StartNewMeasurementButton">New measurement</string>
    <string name="DatabaseButton">Database</string>
    <string name="SearchContactButton">Search Contact</string>
    <string name="InstructionsButtonID">Instructions</string>
    <string name="Delete_all_users_btn">Delete all data</string>
    <string name="greeting2">Welcome to the activity to start a new test! Click the Pretest 1 checkbox if it is the persons first time
        performing the test. Otherwise click the Other tests checkbox. Press the START TEST button when everything is
    finished. </string>


</resources>
