<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.sam.vo2max.UserProfileActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            android:id="@+id/GreetingTextViewID" />


        <TextView
            android:text="@string/idtextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NameTextView"
            android:layout_alignTop="@+id/NameEditTextID"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <TextView
            android:text="@string/agetextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AgeTextView"
            android:textStyle="normal|bold"
            android:layout_below="@+id/NameTextView"
            android:layout_alignParentStart="true"
            android:textSize="18sp" />

        <TextView
            android:text="@string/weighttextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/WeightTextViewID"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/AgeTextView"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/Statistic_Btn"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/NewMeasurementButtonID"
            android:layout_marginTop="16dp"
            android:background="@drawable/my_button_beige"
            android:drawableLeft="@drawable/ic_listbutton_2_4"
            android:onClick="viewContact"
            android:paddingEnd="3dp"
            android:paddingLeft="3dp"
            android:text="@string/database_btn"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/WeightEditTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/WeightTextViewID"
            android:layout_alignBottom="@+id/WeightTextViewID"
            android:layout_toEndOf="@+id/Statistic_Btn"
            android:ems="5"
            android:hint="@string/kg"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/AgeEditTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/WeightTextViewID"
            android:layout_alignStart="@+id/WeightEditTextID"
            android:ems="5"
            android:hint="@string/user_age_hint"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/NameEditTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/AgeEditTextID"
            android:layout_below="@+id/OtherTestsCheckBoxID"
            android:ems="6"
            android:hint="@string/user_id_hint"
            android:inputType="none|textPersonName"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <Button
            android:id="@+id/NewMeasurementButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/WeightEditTextID"
            android:layout_below="@+id/WeightEditTextID"
            android:layout_marginTop="58dp"
            android:background="@drawable/my_button_blue"
            android:drawableStart="@drawable/ic_mesurmentbutton_2_4_2"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:text="@string/NewMeasurement" />

        <Button
            android:id="@+id/button"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Statistic_Btn"
            android:layout_alignBottom="@+id/Statistic_Btn"
            android:layout_alignParentEnd="true"
            android:background="@drawable/my_button_beige"
            android:drawableStart="@drawable/ic_searchbutton_2_4"
            android:onClick="search_contact"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:text="@string/btnSearch"
            android:textColor="@color/black" />

        <CheckBox
            android:text="@string/Pretest1"
            android:id ="@+id/PretestCheckBoxID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_below="@+id/GreetingTextViewID"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"
            android:focusable="false"
            android:layout_alignEnd="@+id/WeightTextViewID" />

        <CheckBox
            android:text="@string/other_tests"
            android:id ="@+id/OtherTestsCheckBoxID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_alignBaseline="@+id/PretestCheckBoxID"
            android:layout_alignBottom="@+id/PretestCheckBoxID"
            android:layout_alignEnd="@+id/AgeEditTextID" />


    </RelativeLayout>
</ScrollView>