<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView android:id="@+id/horizontalScrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/data_list_activity"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="com.example.sam.vo2max.DataListActivity"
    android:background="@color/colorPrimary">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/orange"
        android:id="@+id/relativeLayout">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_date_time_stamp"
            android:text="@string/date_2"
            android:textColor="@color/white"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:gravity="center"
            android:layout_alignParentBottom="true"/>
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_id"
            android:text="@string/id"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_date_time_stamp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_power3"
            android:text="@string/power3MPT"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_id"
            android:layout_alignParentBottom="true" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_power4"
            android:text="@string/power4MPT"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_power3"
            android:layout_alignParentBottom="true" />
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_power5"
            android:text="@string/power5MPT"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="normal|bold"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/text_user_power4"
            android:layout_alignParentBottom="true" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_vo2max_liter_3"
            android:text="@string/vo2max_liter_3"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_power5"
            android:layout_alignParentBottom="true" />
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_vo2max_liter_4"
            android:text="@string/vo2max_liter_4"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_vo2max_liter_3"
            android:layout_alignParentBottom="true" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_vo2max_liter_5"
            android:text="@string/vo2max_liter_5"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_vo2max_liter_4"
            android:layout_alignParentBottom="true" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_vo2max_mliter_3"
            android:text="@string/vo2max_mliter_3"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_vo2max_liter_5"
            android:layout_alignParentBottom="true" />
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_vo2max_mliter_4"
            android:text="@string/vo2max_mliter_4"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_vo2max_mliter_3"
            android:layout_alignParentBottom="true" />
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_vo2max_mliter_5"
            android:text="@string/vo2max_mliter_5"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_vo2max_mliter_4"
            android:layout_alignParentBottom="true" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_antal_vandor_3"
            android:text="@string/number_of_laps_3"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_vo2max_mliter_5" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_antal_vandor_4"
            android:text="@string/antal_vandor_4"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_antal_vandor_3" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_antal_vandor_5"
            android:text="@string/number_of_laps_5"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/text_user_antal_vandor_4" />

    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_view"
        android:layout_below="@+id/relativeLayout"
        android:divider="@android:color/transparent"
        android:dividerHeight="0sp" ></ListView>
</RelativeLayout>
</HorizontalScrollView>