<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="16dp"
    android:paddingStart="13dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_idtextview"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/UserIdTextViewID"
        android:layout_below="@+id/SearchButtonID"

        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/delete_user"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/DeleteButtonID"
        android:onClick="deleteContact"
        android:layout_below="@+id/UserIdTextViewID"
        android:layout_alignParentEnd="true"
        android:background="@drawable/my_button_red"
        android:layout_marginTop="29dp" />

    <Button
        android:text="@string/show_user"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/ShowUserButtonID"
        android:onClick="showContact"
        android:background="@drawable/my_button_green"
        android:layout_alignBaseline="@+id/DeleteButtonID"
        android:layout_alignBottom="@+id/DeleteButtonID"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/SearchButtonID"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/SearchNameEditTextID"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/SearchNameEditTextID"
        android:background="@drawable/my_button_beige"
        android:drawableStart="@drawable/ic_searchbutton_2_4"
        android:onClick="searchContact"
        android:paddingStart="5dp"
        android:text="@string/search" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        android:id="@+id/SearchNameEditTextID"
        android:layout_alignParentTop="true"
        android:selectAllOnFocus="true"
        android:layout_toStartOf="@+id/DeleteButtonID"
        android:inputType="textPersonName" />
</RelativeLayout>
