<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/GreetingTextViewID"
        android:layout_width="305dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/greeting" />

    <Button
        android:id="@+id/StartNewMeasurementID"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/my_button_blue"
        android:drawableStart="@drawable/ic_mesurmentbutton_2_4_2"
        android:onClick="newMeasurment"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/StartNewMeasurementButton" />

    <Button
        android:id="@+id/DatabaseButtonID"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/my_button_beige"
        android:drawableStart="@drawable/ic_listbutton_2_4"
        android:onClick="showDatabase"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/DatabaseButton" />

    <Button
        android:id="@+id/SearchContactButtonID"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/my_button_beige"
        android:drawableStart="@drawable/ic_searchbutton_2_4"
        android:onClick="searchContact"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/SearchContactButton" />

    <Button
        android:id="@+id/InstructionsButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/my_button_beige"
        android:drawableStart="@drawable/ic_instructionbutton"
        android:onClick="showInstruction"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/InstructionsButtonID" />
</LinearLayout>
</ScrollView>