<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/valueSelector_margin_top"
        android:textSize="@dimen/valueSelector_text"
        android:text="@string/Laps_textbox"
        android:enabled="false"
        android:inputType="number"
        android:background="@null"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:id="@+id/valueTextView" />

    <TextView
        android:id="@+id/valueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/valueSelector_label_text"
        android:text="@string/valueSelector_label"
        android:layout_below="@+id/valueTextView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/silver" />

    <ImageView
        android:id="@+id/plusButton"
        android:layout_width="122dp"
        android:layout_height="85dp"
        android:layout_alignStart="@+id/valueLabel"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/valueSelector_button_hMargin"
        android:layout_marginStart="@dimen/valueSelector_button_insideMargin"
        android:layout_marginTop="@dimen/valueSelector_button_hMargin"
        android:clickable="true"
        android:contentDescription="@string/incrementbutton"
        android:src="@drawable/valueselect_plus_state" />

    <ImageView
        android:id="@+id/minusButton"
        android:layout_width="310dp"
        android:layout_height="66dp"
        android:layout_alignEnd="@+id/valueLabel"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/valueSelector_button_hMargin"
        android:layout_marginEnd="@dimen/valueSelector_button_insideMargin"
        android:layout_marginTop="@dimen/valueSelector_button_hMargin"
        android:clickable="true"
        android:contentDescription="@string/decrementbutton"
        android:src="@drawable/valueselect_minus_state" />

</merge>

